2009-07-27  Hedayat Vatankhah  <hedayat@grad.com>

	* lib/salt/fileclasses.cpp (RFile::BundlePath): 
	- use SPARK_DIR environment variable for BundlePath if available

2009-07-26  Hedayat Vatankhah  <hedayat@grad.com>

	* CMakeLists.txt: 
	- set SPARK_DIR environment flag when installed using NSIS installer
	
	* cmake/FindODE.cmake: 
	- try to detect correct ODE preprocessor flag on Windows

2009-07-24  Marian Buchta  <marian.buchta@gmail.com>

	* cmake/FindRuby.cmake
	- Add include and library path for Ruby 1.8 and 1.9 (for Windows)

2009-06-24  Hedayat Vatankhah  <hedayat@grad.com>

	* NEWS: 
	* RELEASE:
	- prepared for 0.1.1 release
	 
	* lib/oxygen/simulationserver/agentcontrol.cpp: 
	- Sending senses to agents after generating all senses, to be (hopefully!) a
	  bit more fare to agents.

2009-06-15  Sander van Dijk  <sgvandijk@gmail.com>

  * lib/oxygen/simulationserver/netcontrol.cpp
  - Make reading client messages a bit more fail-safe by making sure the full message is read
  
2009-04-15  Hedayat Vatankhah  <hedayat@grad.com>

	* plugin/CMakeLists.txt: 
	- don't link plugins to spark libraries to prevent segfault on Linux
	
	* lib/oxygen/simulationserver/simulationserver.cpp (UpdateDeltaTimeAfterStep):
	- Skipping remaining time error is now a debug warning message 

2009-03-17  Hedayat Vatankhah  <hedayat@grad.com>

	* lib/kerosin/imageserver/imageserver.h (ImageServer): 
	- added a fix for the latest DevIL package
	
	* lib/zeitgeist/scriptserver/rubywrapper.cpp: 
	- improved ruby 1.9 compatibility

2009-03-07  Hedayat Vatankhah  <hedayat@grad.com>

	* test/scenetest/CMakeLists.txt: 
	- exclude from build in Windows
	
	* test/CMakeLists.txt: 
	* plugin/CMakeLists.txt: 
	- fixed for Windows compatibility
	- add Boost library dir to link directories
	
	* cmake/FindODE.cmake: 
	- add search paths for latest ode release (ode-0.11)
	
	* plugin/filesystemzip/CMakeLists.txt: 
	- build only if zlib is available
	
	* spark/CMakeLists.txt: 